--- a/index.css
+++ b/index.css
@@ -8,11 +8,11 @@
     --gray: #e2e8f0;
 }
 .img {
-    
-    height:300px;
+    height: 300px;
     border-radius: 50px;
-    margin: 0px;
-    align-items: center;
+    display: block;
+    margin: 0 auto; 
+    max-width: 100%; 
 }
 
 body {
