--- a/index.css
+++ b/index.css
@@ -125,10 +125,10 @@ h2 {
 .problem-section {
     background: var(--gray);
     margin: 8px;
-    background-size: cover;
-    padding: 8px;
+    padding: 2rem;
     align-items: center;
     justify-content: center;
+    border-radius: 10px;
 }
 
 .stats {
