--- a/index.css
+++ b/index.css
@@ -129,7 +129,7 @@ h2 {
     align-items: center;
     justify-content: center;
     border-radius: 10px;
-    margin-right:8px;
+    margin-left:8px;
 }
 
 .stats {
