--- a/index.css
+++ b/index.css
@@ -124,14 +124,21 @@ h2 {
 
 .problem-section {
     background: var(--gray);
-    margin: 8px;
+    margin: 8px;          
     padding: 10px;
     align-items: center;
     justify-content: center;
     border-radius: 10px;
-    margin-left:8px;
-}
-
+    
+  }
+  
+  @media (max-width: 600px) {
+    .problem-section {
+      width: 90%;          
+      max-width: 400px;     
+      margin: 8px auto;    
+    }
+  }
 .stats {
     display: flex;
     justify-content: space-around;
