--- a/index.css
+++ b/index.css
@@ -101,6 +101,7 @@ section {
     background: white;
     border-radius: 10px;
     padding: 5px;
+    margin:5px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
     transition: transform 0.3s ease;
 }
