--- a/index.css
+++ b/index.css
@@ -104,6 +104,7 @@ section {
     margin:5px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
     transition: transform 0.3s ease;
+    width:100%;
 }
 
 .feature-card:hover {
