--- a/index.css
+++ b/index.css
@@ -100,11 +100,13 @@ section {
 .feature-card {
     background: white;
     border-radius: 10px;
-    padding: 5px;
+    padding: 0px;
     margin:5px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
     transition: transform 0.3s ease;
     width:100%;
+    align-items: center;
+    justify-content: center;
 }
 
 .feature-card:hover {
