--- a/index.css
+++ b/index.css
@@ -122,6 +122,7 @@ h3 {
 h1 {
     font-size: 3rem;
     margin-bottom: 1rem;
+    margin:8px;
 }
 
 h2 {
@@ -129,8 +130,15 @@ h2 {
     text-align: center;
     margin-bottom: 2rem;
     color: var(--primary);
+    margin:8px;
 }
-
+h3{
+    font-size: 2.5rem;
+    text-align: center;
+    margin-bottom: 2rem;
+    color: var(--primary);
+    margin:8px;
+    } 
 .problem-section {
     background: var(--gray);
     margin: 8px;          
