--- a/index.css
+++ b/index.css
@@ -120,7 +120,7 @@ h3 {
 }
 
 h1 {
-    font-size: 3rem;
+    font-size: 2.5rem;
     margin-bottom: 1rem;
     margin:8px;
     padding:5px;
@@ -288,6 +288,8 @@ footer {
 
 p {
     font-size: 25px;
+    margin:8px;
+    padding:5px;
 }
 
 .h2 {
