--- a/index.css
+++ b/index.css
@@ -123,7 +123,7 @@ h1 {
     font-size: 2.5rem;
     margin-bottom: 1rem;
     margin:8px;
-    padding:5px;
+    
 }
 
 h2 {
@@ -132,7 +132,7 @@ h2 {
     margin-bottom: 2rem;
     color: var(--primary);
     margin:8px;
-    padding:5px;
+
     
 }
 h3{
@@ -141,7 +141,7 @@ h3{
     margin-bottom: 2rem;
     color: var(--primary);
     margin:8px;
-     padding:5px;
+    
     } 
 .problem-section {
     background: var(--gray);
@@ -286,7 +286,7 @@ footer {
     color: #f72585;
 }
 
-.para {
+.p {
     font-size: 25px;
     margin:8px;
     padding:5px;
