--- a/index.css
+++ b/index.css
@@ -100,8 +100,8 @@ section {
 .feature-card {
     background: white;
     border-radius: 10px;
-    padding: 0px;
-    margin:5px;
+    padding: 2rem;
+    margin:8px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
     transition: transform 0.3s ease;
     width:100%;
@@ -146,7 +146,7 @@ h3{
 .problem-section {
     background: var(--gray);
     margin: 8px;          
-    padding: 10px;
+     padding: 2rem;
     align-items: center;
     justify-content: center;
     border-radius: 10px;
