--- a/index.css
+++ b/index.css
@@ -113,36 +113,27 @@ section {
     transform: translateY(-10px);
 }
 
-h1,
-h2,
-h3 {
-    margin-top: 0;
+@media (max-width: 600px) {
+    h1 {
+        font-size: 2rem;
+        text-align: center;
+        color: var(--primary);
+    }
+    h2 {
+        font-size: 1.5rem;
+        text-align: center;
+        color: var(--primary);
+    }
+    h3 {
+        font-size: 1.2rem;
+        text-align: center;
+        color: var(--primary);
+    }
+    .btn {
+        padding: 0.6rem 1.2rem;
+        font-size: 0.9rem;
+    }
 }
-
-h1 {
-    font-size: 2.5rem;
-    margin-bottom: 1rem;
-    margin:8px;
-    
-}
-
-h2 {
-    font-size: 2.5rem;
-    text-align: center;
-    margin-bottom: 2rem;
-    color: var(--primary);
-    margin:8px;
-
-    
-}
-h3{
-    font-size: 2.5rem;
-    text-align: center;
-    margin-bottom: 2rem;
-    color: var(--primary);
-    margin:8px;
-    
-    } 
 .problem-section {
     background: var(--gray);
     margin: 8px;          
