--- a/index.css
+++ b/index.css
@@ -8,9 +8,9 @@
     --gray: #e2e8f0;
 }
 .img {
-    height: 300px;
-    width:500px;
-    
+    height: 200px;
+    width:400px;
+     border-radius: 70px;
     display: block;
     margin: 0 auto; 
     max-width: 100%; 
